--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Кэт энерджи</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -11,14 +12,14 @@
 
   <header class="page-header">
     <a href="index.html" class="page-header__logo">
-      <img src="img/logo-desktop.svg"
-        srcset="img/logo-mobile.svg 768w, img/logo-tablet.svg 1200w, img/logo-desktop.svg 4000w" width="191" height="39"
-        alt="Кэт энерджи" class="page-header__logo-image">
+      <picture class="page-header__logo-image">
+        <source media="(min-width: 1200px)" srcset="img/logo-desktop.svg">
+        <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+        <img src="./img/logo-mobile.svg" alt="Кэт энерджи" width="191" height="39">
+      </picture>
     </a>
     <nav class="main-nav">
-      <label class="main-nav__label"><input class="main-nav__toggle visually-hidden" type="button">
-      </label>
-
+     
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
           <li class="site-list__item "><a href="index.html">Главная</a></li>
@@ -31,6 +32,7 @@
   <main class="page-main">
     <section class="page-main__catalog catalog">
       <h1 class="catalog__headline">Каталог продукции</h1>
+
       <ul class="catalog__list">
         <li class="catalog__item item-card">
           <img src="../img/chicken-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy
@@ -196,11 +198,34 @@
           <a href="#" class="button item-card__order button--grey">Показать все</a>
         </li>
 
+
       </ul>
 
     </section>
 
+    <section class="addition">
+      <h2 class="addition__headline">Дополнительные товары</h2>
+      <ul class="addition__list">
+        <li class="addition__item addition-item-card">
 
+          <div class="addition-item-card__wrapper">
+            <h3 class="addition-item-card__headline">Сахарозаменитель</h3>
+            <ul class="addition-item-card__properties">
+
+              <li class="addition-item-card__value">1 упаковка (100 г)</li>
+              <li class="addition-item-card__price">200 Р.</li>
+
+
+            </ul>
+          </div>
+          <a href="#" class="button item-card__order button--green">Заказать</a>
+        </li>
+      </ul>
+    </section>
+
+    <section class="gift">
+      <h2>Закажите все и получите чехол для кота в подарок!</h2>
+    </section>
 
 
   </main>
