--- a/source/index.html
+++ b/source/index.html
@@ -3,21 +3,30 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Кэт энерджи</title>
   <link rel="stylesheet" href="css/style.css">
+
+
 </head>
 
 <body class="main-page">
 
   <header class="page-header">
     <a class="page-header__logo">
-      <img src="img/logo-desktop.svg"
-        srcset="img/logo-mobile.svg 768w, img/logo-tablet.svg 1200w, img/logo-desktop.svg 4000w" width="191" height="39"
-        alt="Кэт энерджи" class="page-header__logo-image">
+
+      <picture >
+        <source media="(min-width: 1200px)" srcset="img/logo-desktop.svg">
+        <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+        <img class="page-header__logo-image" src="img/logo-mobile.svg" alt="Кэт энерджи">
+      </picture>
     </a>
-    <nav class="main-nav">
-      <label class="main-nav__label"><input class="main-nav__toggle visually-hidden" type="button">
-      </label>
+
+    <nav class="main-nav main-nav--opened main-nav--nojs">
+
+      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+
+
 
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
@@ -40,7 +49,11 @@
           <a href="#" class="programs__choose button button--green">Подобрать программу</a>
         </div>
         <div class="programs__image-container">
-          <img src="img/index-can-mobile@1x.png" alt="" class="programs__can">
+          <picture class="programs__can">
+            <source media="(min-width: 1200px)" srcset="img/index-can-desktop@1x.png">
+            <source media="(min-width: 768px)" srcset="img/index-can-tablet@1x.jpg">
+            <img src="img/index-can-mobile@1x.png" alt="Кэт энерджи">
+          </picture>
         </div>
 
 
@@ -67,23 +80,54 @@
     <section class="features">
       <h2 class="features__headline">Как это работает</h2>
       <ul class="features__list feature">
-        <li class="feature__item feature__item--useful"><span class="feature__desc">Функциональное питание содержит
-            только полезные питательные вещества.
-          </span></li>
-        <li class="feature__item feature__item--simple"><span class="feature__desc">Выпускается в виде порошка, который
-            нужно лишь залить кипятком и готово.
-          </span></li>
-        <li class="feature__item feature__item--easy"><span class="feature__desc">Замените один-два приема обычной еды
-            на наше функциональное питание.
-          </span></li>
-        <li class="feature__item feature__item--fast"><span class="feature__desc">Уже через месяц наслаждайтесь
-            изменениями к лучшему вашего питомца!
-          </span></li>
+        <li class="feature__item feature__item--useful">Функциональное питание содержит
+          только полезные питательные вещества.
+        </li>
+        <li class="feature__item feature__item--simple">Выпускается в виде порошка, который
+          нужно лишь залить кипятком и готово.
+        </li>
+        <li class="feature__item feature__item--easy">Замените один-два приема обычной еды
+          на наше функциональное питание.
+        </li>
+        <li class="feature__item feature__item--fast">Уже через месяц наслаждайтесь изменениями к лучшему вашего
+          питомца!
+        </li>
 
       </ul>
     </section>
 
+    <section class="case">
+      <h2 class="case__headline">Живой пример</h2>
+      <p class="case__desc">
+        Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без
+        изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+      </p>
+      <table class="case__table data-table">
+        <tr>
+          <td>снижение веса</td>
+          <td>5 кг</td>
+        </tr>
+        <tr>
+          <td>затрачено времени</td>
+          <td>60 дней</td>
+        </tr>
+        <tr>
+          <td>Затраты на питание: </td>
+          <td>15 000 руб.</td>
+        </tr>
+      </table>
+    </section>
+
+    <section class="contacts">
+      <h2 class="contacts__headline">Приглашаем к сотрудничеству дилеров</h2>
+      <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+      <a href="map.html" class="contacts__map-link">
+        <img src="img/bg-map-mobile@1x.png" alt="Мы на карте" class="contacts__map-image">
+      </a>
+    </section>
+
   </main>
+
   <footer class="page-footer">
     <a class="page-footer__logo"><img src="img/logo-footer.svg" width="128" height="24" alt="Кэт энерджи"></a>
     <ul class="page-footer__social social">
@@ -143,7 +187,7 @@ s1.8,4.1,4.1,4.1s4.1-1.8,4.1-4.1S10.3,3.9,8,3.9z" />
       <svg xmlns="http://www.w3.org/2000/svg" width="27" height="34" viewBox="0 0 60 60">
         <path
           d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z" />
-        </svg>
+      </svg>
 
 
 
@@ -151,7 +195,25 @@ s1.8,4.1,4.1,4.1s4.1-1.8,4.1-4.1S10.3,3.9,8,3.9z" />
     </div>
   </footer>
 
+  <script>
+    var navMain = document.querySelector('.main-nav');
+    var navToggle = document.querySelector('.main-nav__toggle');
 
+    navMain.classList.remove('main-nav--nojs');
+    navMain.classList.add('main-nav--closed');
+    navMain.classList.remove('main-nav--opened');
+
+
+    navToggle.addEventListener('click', function () {
+      if (navMain.classList.contains('main-nav--closed')) {
+        navMain.classList.remove('main-nav--closed');
+        navMain.classList.add('main-nav--opened');
+      } else {
+        navMain.classList.add('main-nav--closed');
+        navMain.classList.remove('main-nav--opened');
+      }
+    });
+  </script>
 </body>
 
 </html>
