--- a/source/catalog.html
+++ b/source/catalog.html
@@ -19,7 +19,6 @@
       </picture>
     </a>
     <nav class="main-nav">
-     
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
           <li class="site-list__item "><a href="index.html">Главная</a></li>
@@ -35,7 +34,7 @@
 
       <ul class="catalog__list">
         <li class="catalog__item item-card">
-          <img src="../img/chicken-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy
+          <img src="img/chicken-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy
           PRO 500 г" class="item-card__image">
           <div class="item-card__wrapper">
             <h3 class="item-card__headline">Cat Energy PRO 500 г</h3>
@@ -57,7 +56,7 @@
           <a href="#" class="button item-card__order button--green">Заказать</a>
         </li>
         <li class="catalog__item item-card">
-          <img src="../img/chicken-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy
+          <img src="img/chicken-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy
           PRO 1000 г" class="item-card__image">
           <div class="item-card__wrapper">
             <h3 class="item-card__headline">Cat Energy PRO 1000 г</h3>
@@ -80,7 +79,7 @@
           <a href="#" class="button item-card__order button--green">Заказать</a>
         </li>
         <li class="catalog__item item-card">
-          <img src="../img/fish-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy
+          <img src="img/fish-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy
               PRO 500 г" class="item-card__image">
           <div class="item-card__wrapper">
             <h3 class="item-card__headline">Cat Energy PRO 500 г</h3>
@@ -102,7 +101,7 @@
           <a href="#" class="button item-card__order button--green">Заказать</a>
         </li>
         <li class="catalog__item item-card">
-          <img src="../img/fish-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy
+          <img src="img/fish-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy
                 PRO 1000 г" class="item-card__image">
           <div class="item-card__wrapper">
             <h3 class="item-card__headline">Cat Energy PRO 1000 г</h3>
@@ -124,7 +123,7 @@
           <a href="#" class="button item-card__order button--green">Заказать</a>
         </li>
         <li class="catalog__item item-card">
-          <img src="../img/buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy
+          <img src="img/buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy
                   SLIM 500 г" class="item-card__image">
           <div class="item-card__wrapper">
             <h3 class="item-card__headline">Cat Energy SLIM 500 г</h3>
@@ -146,7 +145,7 @@
           <a href="#" class="button item-card__order button--green">Заказать</a>
         </li>
         <li class="catalog__item item-card">
-          <img src="../img/buckwheat-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy
+          <img src="img/buckwheat-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy
                     SLIM 1000 г" class="item-card__image">
           <div class="item-card__wrapper">
             <h3 class="item-card__headline">Cat Energy SLIM 1000 г</h3>
@@ -168,7 +167,7 @@
           <a href="#" class="button item-card__order button--green">Заказать</a>
         </li>
         <li class="catalog__item item-card">
-          <img src="../img/rice-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy
+          <img src="img/rice-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy
                       SLIM 500 г" class="item-card__image">
           <div class="item-card__wrapper">
             <h3 class="item-card__headline">Cat Energy SLIM 500 г</h3>
