--- a/source/index.html
+++ b/source/index.html
@@ -46,7 +46,7 @@
           <h1 class="programs__headline">Функциональное питание для котов</h1>
           <p class="programs__slogan">Занялся собой? Займись котом!</p>
 
-          <a href="#" class="programs__choose button button--green">Подобрать программу</a>
+          <a href="form.html" class="programs__choose button button--green">Подобрать программу</a>
         </div>
         <div class="programs__image-container">
           <picture class="programs__can">
@@ -204,25 +204,8 @@ s1.8,4.1,4.1,4.1s4.1-1.8,4.1-4.1S10.3,3.9,8,3.9z" />
     </div>
   </footer>
 
-  <script>
-    var navMain = document.querySelector('.main-nav');
-    var navToggle = document.querySelector('.main-nav__toggle');
+  <script src="js/app.js"></script>
 
-    navMain.classList.remove('main-nav--nojs');
-    navMain.classList.add('main-nav--closed');
-    navMain.classList.remove('main-nav--opened');
-
-
-    navToggle.addEventListener('click', function () {
-      if (navMain.classList.contains('main-nav--closed')) {
-        navMain.classList.remove('main-nav--closed');
-        navMain.classList.add('main-nav--opened');
-      } else {
-        navMain.classList.add('main-nav--closed');
-        navMain.classList.remove('main-nav--opened');
-      }
-    });
-  </script>
 </body>
 
 </html>
