--- a/source/catalog.html
+++ b/source/catalog.html
@@ -44,8 +44,9 @@
 
 
           <picture class="item-card__image">
-            <source media="(min-width: 1200px)" srcset="img/chicken-small-desktop@1x.png">
-            <source media="(min-width: 768px)" srcset="img/chicken-small-tablet@1x.png">
+            <source media="(min-width: 1200px)" srcset="img/chicken-small-desktop@1x.png 1x, img/chicken-small-desktop@2x.png 2x">
+            <source media="(min-width: 768px)" srcset="img/chicken-small-tablet@1x.png 1x, img/chicken-small-tablet@2x.png 2x">
+              <source media="(min-width: 320px)" srcset="img/chicken-small-mobile@1x.png 1x, img/chicken-small-mobile@2x.png 2x">
             <img src="img/chicken-small-mobile@1x.jpg" alt="Cat Energy
                   PRO 500 г" class="item-card__image">
           </picture>
@@ -75,8 +76,9 @@
         </li>
         <li class="catalog__item item-card">
           <picture class="item-card__image">
-            <source media="(min-width: 1200px)" srcset="img/chicken-big-desktop@1x.png">
-            <source media="(min-width: 768px)" srcset="img/chicken-big-tablet@1x.png">
+            <source media="(min-width: 1200px)" srcset="img/chicken-big-desktop@1x.png 1x, img/chicken-big-desktop@2x.png 2x">
+            <source media="(min-width: 768px)" srcset="img/chicken-big-tablet@1x.png 1x, img/chicken-big-tablet@2x.png 2x">
+              <source media="(min-width: 320px)" srcset="img/chicken-big-mobile@1x.png 1x, img/chicken-big-mobile@2x.png 2x">
             <img src="img/chicken-big-mobile@1x.jpg" alt="Cat Energy
           PRO 1000 г" class="item-card__image">
           </picture>
@@ -104,8 +106,9 @@
         <li class="catalog__item item-card">
 
           <picture class="item-card__image">
-            <source media="(min-width: 1200px)" srcset="img/fish-small-desktop@1x.png">
-            <source media="(min-width: 768px)" srcset="img/fish-small-tablet@1x.png">
+            <source media="(min-width: 1200px)" srcset="img/fish-small-desktop@1x.png 1x, img/fish-small-desktop@2x.png 2x">
+            <source media="(min-width: 768px)" srcset="img/fish-small-tablet@1x.png 1x, img/fish-small-tablet@2x.png 2x">
+              <source media="(min-width: 320px)" srcset="img/fish-small-mobile@1x.jpg 1x, img/fish-small-mobile@2x.jpg 2x">
             <img src="img/fish-small-mobile@1x.jpg" alt="Cat Energy
                   PRO 500 г" class="item-card__image">
           </picture>
@@ -133,8 +136,9 @@
         <li class="catalog__item item-card">
 
           <picture class="item-card__image">
-            <source media="(min-width: 1200px)" srcset="img/fish-big-desktop@1x.png">
-            <source media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.png">
+            <source media="(min-width: 1200px)" srcset="img/fish-big-desktop@1x.png 1x, img/fish-big-desktop@2x.png 2x">
+            <source media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.png 1x, img/fish-big-tablet@2x.png 2x">
+              <source media="(min-width: 320px)" srcset="img/fish-big-mobile@1x.png 1x, img/fish-big-mobile@2x.png 2x">
             <img src="img/fish-big-mobile@1x.jpg" alt="Cat Energy
                 PRO 1000 г" class="item-card__image">
           </picture>
@@ -162,8 +166,9 @@
         <li class="catalog__item item-card">
 
           <picture class="item-card__image">
-            <source media="(min-width: 1200px)" srcset="img/buckwheat-small-desktop@1x.png">
-            <source media="(min-width: 768px)" srcset="img/buckwheat-small-tablet@1x.png">
+            <source media="(min-width: 1200px)" srcset="img/buckwheat-small-desktop@1x.png 1x, img/buckwheat-small-desktop@2x.png 2x">
+            <source media="(min-width: 768px)" srcset="img/buckwheat-small-tablet@1x.png 1x, img/buckwheat-small-tablet@2x.png 2x">
+              <source media="(min-width: 320px)" srcset="img/buckwheat-small-mobile@1x.jpg 1x, img/buckwheat-small-mobile@2x.jpg 2x">
             <img src="img/buckwheat-small-mobile@1x.jpg" alt="Cat Energy
                   SLIM 500 г">
           </picture>
@@ -191,8 +196,9 @@
         <li class="catalog__item item-card">
 
           <picture class="item-card__image">
-            <source media="(min-width: 1200px)" srcset="img/buckwheat-big-desktop@1x.png">
-            <source media="(min-width: 768px)" srcset="img/buckwheat-big-tablet@1x.png">
+            <source media="(min-width: 1200px)" srcset="img/buckwheat-big-desktop@1x.png 1x, img/buckwheat-big-desktop@2x.png 2x">
+            <source media="(min-width: 768px)" srcset="img/buckwheat-big-tablet@1x.png 1x, img/buckwheat-big-tablet@2x.png 2x">
+              <source media="(min-width: 320px)" srcset="img/buckwheat-big-mobile@1x.jpg 1x, img/buckwheat-big-mobile@2x.jpg 2x">
             <img src="img/buckwheat-big-mobile@1x.jpg" alt="Cat Energy
                     SLIM 1000 г">
           </picture>
@@ -220,8 +226,9 @@
         <li class="catalog__item item-card">
 
           <picture class="item-card__image">
-            <source media="(min-width: 1200px)" srcset="img/rice-small-desktop@1x.png">
-            <source media="(min-width: 768px)" srcset="img/rice-small-tablet@1x.png">
+            <source media="(min-width: 1200px)" srcset="img/rice-small-desktop@1x.png 1x, img/rice-small-desktop@2x.png 2x">
+            <source media="(min-width: 768px)" srcset="img/rice-small-tablet@1x.png 1x, img/rice-small-tablet@2x.png 2x">
+              <source media="(min-width: 320px)" srcset="img/rice-big-mobile@1x.jpg 1x, img/rice-big-mobile@2x.jpg 2x">
             <img src="img/rice-small-mobile@1x.jpg" alt="Cat Energy
                       SLIM 500 г">
           </picture>
