--- a/source/catalog.html
+++ b/source/catalog.html
@@ -18,7 +18,7 @@
     <a class="page-header__logo">
 
       <picture>
-        <source media="(min-width: 1200px)" srcset="img/logo-desktop.svg">
+        <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
         <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
         <img class="page-header__logo-image" src="img/logo-mobile.svg" alt="Кэт энерджи">
       </picture>
@@ -42,34 +42,24 @@
   <main class="page-main">
     <section class="page-main__catalog catalog">
       <h1 class="catalog__headline">Каталог продукции</h1>
-
       <ul class="catalog__list">
-
         <li class="catalog__item item-card" id="pro">
-
-
           <picture>
-
-            <source type="image/webp" media="(min-width: 1200px)"
+            <source type="image/webp" media="(min-width: 1300px)"
               srcset="img/chicken-small-desktop@1x.webp 1x, img/chicken-small-desktop@2x.webp 2x">
             <source type="image/webp" media="(min-width: 768px)"
               srcset="img/chicken-small-tablet@1x.webp 1x, img/chicken-small-tablet@2x.webp 2x">
             <source type="image/webp" srcset="img/chicken-small-mobile@1x.webp 1x, img/chicken-small-mobile@2x.webp 2x">
 
-            <source media="(min-width: 1200px)"
+            <source media="(min-width: 1300px)"
               srcset="img/chicken-small-desktop@1x.png 1x, img/chicken-small-desktop@2x.png 2x">
             <source media="(min-width: 768px)"
               srcset="img/chicken-small-tablet@1x.png 1x, img/chicken-small-tablet@2x.png 2x">
             <img class="item-card__image" src="img/chicken-small-mobile@1x.jpg"
               srcset="img/chicken-small-mobile@2x.jpg 2x" alt="Cat Energy PRO 500 г">
           </picture>
-
-
-
-
-
           <div class="item-card__wrapper">
-            <h3 class="item-card__headline">Cat Energy PRO 500 г</h3>
+            <h3 class="item-card__headline">Cat Energy PRO 500&nbspг</h3>
             <table class="item-card__properties properties">
               <tr>
                 <td class="properties__field">Объем</td>
@@ -89,14 +79,13 @@
         </li>
         <li class="catalog__item item-card">
           <picture>
-
-            <source type="image/webp" media="(min-width: 1200px)"
+            <source type="image/webp" media="(min-width: 1300px)"
               srcset="img/chicken-big-desktop@1x.webp 1x, img/chicken-big-desktop@2x.webp 2x">
             <source type="image/webp" media="(min-width: 768px)"
               srcset="img/chicken-big-tablet@1x.webp 1x, img/chicken-big-tablet@2x.webp 2x">
             <source type="image/webp" srcset="img/chicken-big-mobile@1x.webp 1x, img/chicken-big-mobile@2x.webp 2x">
 
-            <source media="(min-width: 1200px)"
+            <source media="(min-width: 1300px)"
               srcset="img/chicken-big-desktop@1x.png 1x, img/chicken-big-desktop@2x.png 2x">
             <source media="(min-width: 768px)"
               srcset="img/chicken-big-tablet@1x.png 1x, img/chicken-big-tablet@2x.png 2x">
@@ -104,10 +93,8 @@
               alt="Cat Energy
           PRO 1000 г">
           </picture>
-
           <div class="item-card__wrapper">
-            <h3 class="item-card__headline">Cat Energy PRO 1000 г</h3>
-
+            <h3 class="item-card__headline">Cat Energy PRO 1000&nbspг</h3>
             <table class="item-card__properties properties">
               <tr>
                 <td class="properties__field">Объем</td>
@@ -126,25 +113,22 @@
           <a href="#" class="button item-card__order button--green">Заказать</a>
         </li>
         <li class="catalog__item item-card">
-
           <picture>
-
-            <source type="image/webp" media="(min-width: 1200px)"
+            <source type="image/webp" media="(min-width: 1300px)"
               srcset="img/fish-small-desktop@1x.webp 1x, img/fish-small-desktop@2x.webp 2x">
             <source type="image/webp" media="(min-width: 768px)"
               srcset="img/fish-small-tablet@1x.webp 1x, img/fish-small-tablet@2x.webp 2x">
             <source type="image/webp" srcset="img/fish-small-mobile@1x.webp 1x, img/fish-small-mobile@2x.webp 2x">
 
-            <source media="(min-width: 1200px)"
+            <source media="(min-width: 1300px)"
               srcset="img/fish-small-desktop@1x.png 1x, img/fish-small-desktop@2x.png 2x">
             <source media="(min-width: 768px)"
               srcset="img/fish-small-tablet@1x.png 1x, img/fish-small-tablet@2x.png 2x">
             <img class="item-card__image" src="img/fish-small-mobile@1x.jpg" srcset="img/fish-small-mobile@2x.jpg 2x"
               alt="Cat Energy PRO 500 г">
           </picture>
-
           <div class="item-card__wrapper">
-            <h3 class="item-card__headline">Cat Energy PRO 500 г</h3>
+            <h3 class="item-card__headline">Cat Energy PRO 500&nbspг</h3>
             <table class="item-card__properties properties">
               <tr>
                 <td class="properties__field">Объем</td>
@@ -166,25 +150,25 @@
 
           <picture>
 
-            <source type="image/webp" media="(min-width: 1200px)"
+            <source type="image/webp" media="(min-width: 1300px)"
               srcset="img/fish-big-desktop@1x.webp 1x, img/fish-big-desktop@2x.webp 2x">
             <source type="image/webp" media="(min-width: 768px)"
               srcset="img/fish-big-tablet@1x.webp 1x, img/fish-big-tablet@2x.webp 2x">
             <source type="image/webp" srcset="img/fish-big-mobile@1x.webp 1x, img/fish-big-mobile@2x.webp 2x">
 
 
-            <source media="(min-width: 1200px)" srcset="img/fish-big-desktop@1x.png 1x, img/fish-big-desktop@2x.png 2x">
+            <source media="(min-width: 1300px)" srcset="img/fish-big-desktop@1x.png 1x, img/fish-big-desktop@2x.png 2x">
             <source media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.png 1x, img/fish-big-tablet@2x.png 2x">
             <img class="item-card__image" src="img/fish-big-mobile@1x.jpg" srcset="img/fish-big-mobile@2x.jpg 2x"
               alt="Cat Energy PRO 1000 г">
           </picture>
 
           <div class="item-card__wrapper">
-            <h3 class="item-card__headline">Cat Energy PRO 1000 г</h3>
+            <h3 class="item-card__headline">Cat Energy PRO 1000&nbspг</h3>
             <table class="item-card__properties properties">
               <tr>
                 <td class="properties__field">Объем</td>
-                <td class="properties__value">500 г</td>
+                <td class="properties__value">1000 г</td>
               </tr>
               <tr>
                 <td class="properties__field">Вкус</td>
@@ -202,25 +186,26 @@
 
           <picture>
 
-            <source type="image/webp" media="(min-width: 1200px)"
+            <source type="image/webp" media="(min-width: 1300px)"
               srcset="img/buckwheat-small-desktop@1x.webp 1x, img/buckwheat-small-desktop@2x.webp 2x">
             <source type="image/webp" media="(min-width: 768px)"
               srcset="img/buckwheat-small-tablet@1x.webp 1x, img/buckwheat-small-tablet@2x.webp 2x">
             <source type="image/webp"
               srcset="img/buckwheat-small-mobile@1x.webp 1x, img/buckwheat-small-mobile@2x.webp 2x">
 
-            <source media="(min-width: 1200px)"
+            <source media="(min-width: 1300px)"
               srcset="img/buckwheat-small-desktop@1x.png 1x, img/buckwheat-small-desktop@2x.png 2x">
             <source media="(min-width: 768px)"
               srcset="img/buckwheat-small-tablet@1x.png 1x, img/buckwheat-small-tablet@2x.png 2x">
 
-            <img src="img/buckwheat-small-mobile@1x.jpg" srcset="img/buckwheat-small-mobile@2x.jpg 2x" alt="Cat Energy
+            <img class="item-card__image" src="img/buckwheat-small-mobile@1x.jpg"
+              srcset="img/buckwheat-small-mobile@2x.jpg 2x" alt="Cat Energy
                   SLIM 500 г">
           </picture>
 
 
           <div class="item-card__wrapper">
-            <h3 class="item-card__headline">Cat Energy SLIM 500 г</h3>
+            <h3 class="item-card__headline">Cat Energy SLIM 500&nbspг</h3>
             <table class="item-card__properties properties">
               <tr>
                 <td class="properties__field">Объем</td>
@@ -242,24 +227,25 @@
 
           <picture>
 
-            <source type="image/webp" media="(min-width: 1200px)"
+            <source type="image/webp" media="(min-width: 1300px)"
               srcset="img/buckwheat-big-desktop@1x.webp 1x, img/buckwheat-big-desktop@2x.webp 2x">
             <source type="image/webp" media="(min-width: 768px)"
               srcset="img/buckwheat-big-tablet@1x.webp 1x, img/buckwheat-big-tablet@2x.webp 2x">
             <source type="image/webp" srcset="img/buckwheat-big-mobile@1x.webp 1x, img/buckwheat-big-mobile@2x.webp 2x">
 
-            <source media="(min-width: 1200px)"
+            <source media="(min-width: 1300px)"
               srcset="img/buckwheat-big-desktop@1x.png 1x, img/buckwheat-big-desktop@2x.png 2x">
             <source media="(min-width: 768px)"
               srcset="img/buckwheat-big-tablet@1x.png 1x, img/buckwheat-big-tablet@2x.png 2x">
 
-            <img src="img/buckwheat-big-mobile@1x.jpg" srcset="img/buckwheat-big-mobile@2x.jpg 2x" alt="Cat Energy
+            <img class="item-card__image" src="img/buckwheat-big-mobile@1x.jpg"
+              srcset="img/buckwheat-big-mobile@2x.jpg 2x" alt="Cat Energy
                     SLIM 1000 г">
           </picture>
 
 
           <div class="item-card__wrapper">
-            <h3 class="item-card__headline">Cat Energy SLIM 1000 г</h3>
+            <h3 class="item-card__headline">Cat Energy SLIM 1000&nbspг</h3>
             <table class="item-card__properties properties">
               <tr>
                 <td class="properties__field">Объем</td>
@@ -278,27 +264,24 @@
           <a href="#" class="button item-card__order button--green">Заказать</a>
         </li>
         <li class="catalog__item item-card">
-
           <picture>
 
-            <source type="image/webp" media="(min-width: 1200px)"
+            <source type="image/webp" media="(min-width: 1300px)"
               srcset="img/rice-small-desktop@1x.webp 1x, img/rice-small-desktop@2x.webp 2x">
             <source type="image/webp" media="(min-width: 768px)"
               srcset="img/rice-small-tablet@1x.webp 1x, img/rice-small-tablet@2x.webp 2x">
             <source type="image/webp" srcset="img/rice-small-mobile@1x.webp 1x, img/rice-small-mobile@2x.webp 2x">
 
 
-            <source media="(min-width: 1200px)"
+            <source media="(min-width: 1300px)"
               srcset="img/rice-small-desktop@1x.png 1x, img/rice-small-desktop@2x.png 2x">
             <source media="(min-width: 768px)"
               srcset="img/rice-small-tablet@1x.png 1x, img/rice-small-tablet@2x.png 2x">
-            <img src="img/rice-small-mobile@1x.jpg" srcset="img/rice-small-mobile@2x.jpg 2x"
+            <img class="item-card__image" src="img/rice-small-mobile@1x.jpg" srcset="img/rice-small-mobile@2x.jpg 2x"
               alt="Cat Energy SLIM 500 г">
           </picture>
-
-
           <div class="item-card__wrapper">
-            <h3 class="item-card__headline">Cat Energy SLIM 500 г</h3>
+            <h3 class="item-card__headline">Cat Energy SLIM 500&nbspг</h3>
             <table class="item-card__properties properties">
               <tr>
                 <td class="properties__field">Объем</td>
@@ -316,9 +299,15 @@
           </div>
           <a href="#" class="button item-card__order button--green">Заказать</a>
         </li>
-        <li class="show-all item-card">
-          <h3 class="item-card__headline">Показать еще 100500 товаров</h3>
-          <p class="show-all__desc">На самом деле вкусов гораздо больше!</p>
+        <li class="item-card item-card--show-all">
+          <div class="item-card__wrapper item-card__wrapper-show-all">
+            <div class="item-card__plus"></div>
+            <!-- <svg width="31" height="31" item-card__plus>
+              <use xlink:href="#icon-plus-mobile"></use>
+            </svg> -->
+            <h3 class="item-card__headline item-card__headline-show-all">Показать еще 100500 товаров</h3>
+            <p class="item-card__desc">На самом деле вкусов гораздо больше!</p>
+          </div>
           <a href="#" class="button item-card__order button--grey">Показать все</a>
         </li>
       </ul>
@@ -326,38 +315,74 @@
 
     <section class="addition">
       <h2 class="addition__headline">Дополнительные товары</h2>
-      <ul class="addition__list">
-        <li class="addition__item addition-item-card">
-          <div class="addition-item-card__wrapper">
-            <h3 class="addition-item-card__headline">Сахарозаменитель</h3>
-            <ul class="addition-item-card__properties">
-              <li class="addition-item-card__value">1 упаковка (100 г)</li>
-              <li class="addition-item-card__price">200 Р.</li>
-            </ul>
-          </div>
-          <a href="#" class="button item-card__order button--green">Заказать</a>
-        </li>
-      </ul>
-    </section>
+      <div class="addition__wrapper">
+        <ul class="addition__list">
+          <li class="addition__item addition-item-card">
+            <div class="addition-item-card__wrapper">
+              <h3 class="addition-item-card__headline">Сахарозаменитель</h3>
+              <ul class="addition-item-card__properties">
+                <li class="addition-item-card__value">1 упаковка (100 г)</li>
+                <li class="addition-item-card__price">200 Р.</li>
+              </ul>
+            </div>
+            <a href="#" class="button addition-item-card__order button--green">Заказать</a>
+          </li>
+          <li class="addition__item addition-item-card">
+            <div class="addition-item-card__wrapper">
+              <h3 class="addition-item-card__headline">Питьевая вода</h3>
+              <ul class="addition-item-card__properties">
+                <li class="addition-item-card__value">5 литров</li>
+                <li class="addition-item-card__price">50 Р.</li>
+              </ul>
+            </div>
+            <a href="#" class="button addition-item-card__order button--green">Заказать</a>
+          </li>
+          <li class="addition__item addition-item-card">
+            <div class="addition-item-card__wrapper">
+              <h3 class="addition-item-card__headline">Молоко</h3>
+              <ul class="addition-item-card__properties">
+                <li class="addition-item-card__value">1 литр</li>
+                <li class="addition-item-card__price">100 Р.</li>
+              </ul>
+            </div>
+            <a href="#" class="button addition-item-card__order button--green">Заказать</a>
+          </li>
+          <li class="addition__item addition-item-card">
+            <div class="addition-item-card__wrapper">
+              <h3 class="addition-item-card__headline">Витамины</h3>
+              <ul class="addition-item-card__properties">
+                <li class="addition-item-card__value">1 упаковка (30 г)</li>
+                <li class="addition-item-card__price">300 Р.</li>
+              </ul>
+            </div>
+            <a href="#" class="button addition-item-card__order button--green">Заказать</a>
+          </li>
+        </ul>
 
-    <section class="gift">
-      <h2>Закажите все и получите чехол для кота в подарок!</h2>
+
+        <div class="addition__gift">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 55.5 60" width="56" height="61">
+            <path fill="#ffffff"
+              d="M52.3 12.2h-7c.5-.7.8-1.4 1.1-2.2.6-2 .4-4.1-.6-5.9-1-1.8-2.6-3.1-4.6-3.7-2-.6-4.1-.4-5.9.6-3.6 2-6.2 6.1-7.6 9-1.4-2.9-4-7.1-7.6-9-3.8-2-8.5-.6-10.5 3.1-1.4 2.7-1.2 5.8.5 8.1h-7c-1.7 0-3.1 1.4-3.1 3.1v9.4c0 1.7 1.4 3.1 3.1 3.1H4v26.1c0 3.3 2.7 6 6 6h35.5c3.3 0 6-2.7 6-6V27.8h.8c1.7 0 3.1-1.4 3.1-3.1v-9.4c.1-1.7-1.3-3.1-3.1-3.1zM36.5 3c1.3-.7 2.7-.8 4.1-.4 1.3.4 2.4 1.3 3.1 2.6.7 1.3.8 2.7.4 4.1-.4 1.2-1.1 2.2-2.2 2.9H29.4C30.5 9.6 33 5 36.5 3zM11.7 5.2C13.2 2.6 16.4 1.6 19 3c3.5 1.9 6 6.6 7.1 9.1H13.5c-2.3-1.4-3.1-4.5-1.8-6.9zm14.8 22.6v13.7H6.4V27.8h20.1zM6.4 53.9v-10h20.2v13.7H10c-2 0-3.6-1.7-3.6-3.7zm39.1 3.7H28.9V43.9h20.2v10c0 2-1.6 3.7-3.6 3.7zm3.6-16.1H28.9V27.8h20.2v13.7zm4-16.8c0 .4-.3.7-.7.7H3.2c-.4 0-.7-.3-.7-.7v-9.4c0-.4.3-.7.7-.7h49.2c.4 0 .7.3.7.7v9.4z" />
+          </svg>
+          <h2 class="addition__gift-headline">Закажите все и&nbspполучите чехол для кота в подарок!</h2>
+        </div>
+      </div>
     </section>
 
     <section class="contacts">
       <div class="contacts__wrapper">
-        <h2 class="contacts__headline">Приглашаем <br>к сотрудничеству дилеров</h2>
-        <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 <span
-            class="contacts__address-city">Санкт-Петербург</span>
+        <h2 class="contacts__headline">Приглашаем <br>к сотрудничеству дилеров!</h2>
+        <p class="contacts__address">ул. Большая Конюшенная, д. 19/8
+          <span class="contacts__address-city">Санкт-Петербург</span>
         </p>
       </div>
-      <a href="map.html" class="contacts__map-link">
-        <picture>
-          <source media="(min-width: 1200px)" srcset="img/bg-map-desktop@1x.png 1x, img/bg-map-desktop@2x.png 2x">
-          <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png 1x, img/bg-map-tablet@2x.png 2x">
-          <img class="contacts__map-image" src="img/bg-map-mobile@1x.png" srcset="img/bg-map-mobile@2x.png 2x"
-            alt="Мы на карте">
-        </picture>
+
+      <a href="map.html" class="contacts__map-link  contacts__map-image">
+        <iframe
+          src="https://yandex.ru/map-widget/v1/?um=constructor%3A523ffa5e96fad9566d3dfbaadcbcf78afacc307a0118f29d5d866989295db9cf&amp;source=constructor"
+          width="100%" height="400" frameborder="0"></iframe>
+
 
       </a>
     </section>
