--- a/source/form.html
+++ b/source/form.html
@@ -50,13 +50,10 @@
             class="contacts__address-city">Санкт-Петербург</span>
         </p>
       </div>
-      <a href="map.html" class="contacts__map-link">
-        <picture>
-          <source media="(min-width: 1200px)" srcset="img/bg-map-desktop@1x.png 1x, img/bg-map-desktop@2x.png 2x">
-          <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png 1x, img/bg-map-tablet@2x.png 2x">
-          <img class="contacts__map-image" src="img/bg-map-mobile@1x.png" srcset="img/bg-map-mobile@2x.png 2x"
-            alt="Мы на карте">
-        </picture>
+
+      <a href="map.html" class="contacts__map-link  contacts__map-image">
+        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A523ffa5e96fad9566d3dfbaadcbcf78afacc307a0118f29d5d866989295db9cf&amp;source=constructor" width="100%" height="400" frameborder="0"></iframe>
+
 
       </a>
     </section>
